# xsr

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  README.md.m4  arg_parser.cpp  arg_parser.h  cursor_image.cpp  cursor_image.h  gettext_options  html_out.cpp  html_out.h  html_template.h  install.sh  main.cpp  markdown-preset.m4  remap.h  signal_handler.cpp  signal_handler.h  test.md  to_png.cpp  to_png.h  window_info.cpp  window_info.h  xievent.cpp  xievent.h  xsr  xsr-1.0.0.ebuild  xsr-min.css  xsr.css  xsr.desktop  xsr.pl  xsr.sh  xsrdata.h
base64/: base64.cpp  base64.h
css/: article.css  tuto.css
cursor/: default.xcf
docs/: example.md  index.md
html/: about.txt
langs/en/: alt.props  modifiers.props  realbuttons.props  realchars.props  translate.props
langs/fr/: alt.props  modifiers.props  realbuttons.props  realchars.props  translate.props
lib/xsr/: Functions.pm
locales/en_US/: template.html
po/: es.po  hu.po  template.pot
